Fixing small issues in ParserTest and ExtractQueryExecutor (handling of unlabelled expressions).